--- a/hugo.toml
+++ b/hugo.toml
@@ -121,7 +121,7 @@ languageName = "English"
     custom = ""
     # whether to show Hugo and theme info
     # 是否显示 Hugo 和主题信息
-    hugo = true
+    hugo = false
     # whether to show copyright info
     # 是否显示版权信息
     copyright = true
