--- a/hugo.toml
+++ b/hugo.toml
@@ -27,25 +27,25 @@ languageName = "English"
     # you can add extra information after the name (HTML format is supported), such as icons
     post = ""
     name = "Blog"
-    url = "/blog/"
+    url = "/posts/"
     # title will be shown when you hover on this menu link
     title = "Blog"
   [[menu.main]]
     weight = 2
-    identifier = "publications"
+    identifier = "papers"
     pre = ""
     post = ""
-    name = "Publications"
-    url = "/publications/"
-    title = "Publications"
+    name = "Papers"
+    url = "/papers/"
+    title = "Papers"
   [[menu.main]]
     weight = 3
-    identifier = "aboutme"
+    identifier = "about"
     pre = ""
     post = ""
-    name = "About me"
-    url = "/aboutme/"
-    title = "About me"
+    name = "About"
+    url = "about.md"
+    title = "About"
 
 # Markup related configuration in Hugo
 [markup]
@@ -101,7 +101,7 @@ languageName = "English"
       logo = ""
       # title name
       # 标题名称
-      name = "Andrea Viselli"
+      name = "Home"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = ""
@@ -130,7 +130,7 @@ languageName = "English"
     author = true
     # site creation time
     # 网站创立年份
-    since = 2022
+    since = 2023
     # ICP info only in China (HTML format is supported)
     # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
     icp = ""
@@ -231,13 +231,13 @@ languageName = "English"
       gravatarEmail = ""
       # URL of avatar shown in home page
       # 主页显示头像的 URL
-      avatarURL = "images/avatar.png"
+      avatarURL = "images/img0.jpg"
       # title shown in home page (HTML format is supported)
       # 主页显示的网站标题 (支持 HTML 格式)
-      title = ""
+      title = "Ciao! I am Andrea Viselli ✌️🤓"
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
-      subtitle = "Welcome to my personal page."
+      subtitle = "Welcome to my personal page"
       # whether to use typeit animation for subtitle
       # 是否为副标题显示打字机动画
       typeit = true
@@ -257,8 +257,9 @@ languageName = "English"
   # Social config in home page
   # 主页的社交信息设置
   [params.social]
-    GitHub = "andreaviselli"
-    Linkedin = "andreaviselli"
+  GitHub = "andreaviselli"
+  Linkedin = "andreaviselli"
+  email = "andrea.viselli01@universitadipavia.it"
 
   # Page global config
   # 文章页面全局配置
