--- a/hugo.toml
+++ b/hugo.toml
@@ -27,7 +27,7 @@ languageName = "English"
     # you can add extra information after the name (HTML format is supported), such as icons
     post = ""
     name = "Blog"
-    url = "/posts/"
+    url = "/blog/"
     # title will be shown when you hover on this menu link
     title = ""
   [[menu.main]]
@@ -40,14 +40,6 @@ languageName = "English"
     title = ""
   [[menu.main]]
     weight = 3
-    identifier = "workingpapers"
-    pre = ""
-    post = ""
-    name = "Working papers"
-    url = "/workingpapers/"
-    title = ""
-  [[menu.main]]
-    weight = 4
     identifier = "about"
     pre = ""
     post = ""
