--- a/hugo.toml
+++ b/hugo.toml
@@ -52,7 +52,7 @@ languageName = "English"
     pre = ""
     post = ""
     name = "ets4"
-    url = "/ets4/"
+    url = "/ets4/main/"
     title = ""
   [[menu.main]]
     weight = 5
@@ -95,7 +95,7 @@ languageName = "English"
   title = ""
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "Welcome to my personal page."
+  description = "Welcome to my personal page"
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -253,7 +253,7 @@ languageName = "English"
       title = ""
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
-      subtitle = "Welcome to my personal page"
+      subtitle = "Creative people need time to sit down and do nothing"
       # whether to use typeit animation for subtitle
       # 是否为副标题显示打字机动画
       typeit = true
